--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-  Hello world
+  <div id="gameboard"></div>
+
+  <p id="info"></p>
   <script src="script.js"></script>
 
 </body>
