--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
   <title>Tic-tac-toe Javascript</title>
   <link href="styles.css" rel="stylesheet" />
 </head>
-
 <body>
+
   <div id="gameboard"></div>
-
   <p id="info"></p>
+
   <script src="script.js"></script>
-
 </body>
-
 </html>
