corrected linkage from script.js to app.js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <div id="gameboard"></div>
   <p id="info"></p>
 
-  <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
